--- a/styles/styles.css
+++ b/styles/styles.css
@@ -249,5 +249,51 @@ footer{
     .buttonsHeader1{width: 90%;button{padding: 9px 3%;};}
     .header1{padding-left: 5%;h1{font-size: 50px;}}
     .article1{display: flex;flex-wrap: wrap; gap: 1%;img{width: 250px;height: 250px;};.article2{width: 60%;gap: 7px;}}
+    .cardContainer{
+        flex-wrap: wrap;
+        margin-left: 17%;
+        gap: 15px;
+    }
+    .card1{
+        width: 250px;
+        padding: 1px 3% 8px 3%;
+        .priceBackgrd{width: 108%;padding: 5px 0};
+        .buttonCont{width: 108%;}
+        .cardList{margin: 10px 0;gap: 7px;}
+    }
+    footer{gap: 20%;
+    flex-wrap: wrap;
+    padding: 7px;}
+
+}
+@media (max-width: 480px){
+    header{
+        flex-wrap: wrap;
+        .header1{
+            width: 100%;
+            padding: 30px 15%;
+        }
+        .header2{
+            width: 100%;
+            height: 300px;
+            margin-bottom: 20px;
+            img{height: 200px;margin: 15% 0 0 15%;}
+        }   
+    }
+    article{
+        margin-top: 160px;
+        .article1{gap: 15px; img{width: 170px;height: 170px;}}
+        
+    }
+    .plansPricing{margin-top: 10px;text-align: center;}
+    .card1{
+        width: 220px;
+        .priceBackgrd{width: 106%;padding: 5px 0};
+        .buttonCont{width: 106%;}
+    }
+    .cardContainer{margin-left: 10%;}
+    footer{text-align: center;}
+    
+
 }
 
